--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>导语：根据2016年山东公务员考试安排，2016年山东公务员笔试将于4月23日进行。目前距离笔试已不足一月的时间，这也预示着目前考生们的备考已进入冲刺复习阶段，如何高效率的学习，取得事半功倍的效果？山东公务员考试网（www.sdgwy.org）以此出发点，并作如下整理，希望考生们能迎头赶上，取得高分。</p>
     <p>导语：根据2016年山东公务员考试安排，2016年山东公务员笔试将于4月23日进行。目前距离笔试已不足一月的时间，这也预示着目前考生们的备考已进入冲刺复习阶段，如何高效率的学习，取得事半功倍的效果？山东公务员考试网（www.sdgwy.org）以此出发点，并作如下整理，希望考生们能迎头赶上，取得高分。</p>
     <p>导语：根据2016年山东公务员考试安排，2016年山东公务员笔试将于4月23日进行。目前距离笔试已不足一月的时间，这也预示着目前考生们的备考已进入冲刺复习阶段，如何高效率的学习，取得事半功倍的效果？山东公务员考试网（www.sdgwy.org）以此出发点，并作如下整理，希望考生们能迎头赶上，取得高分。</p>
+    <a href="11">期中</a>
 </body>
 
 </html>
