--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html>
 
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>背景，盒模型，文字样式及布局练习</title>
-    <link rel="stylesheet" href="110.css">
+	<title></title>
 </head>
-
-<body>
-    <h1>背景</h1>
-    <p>导语：根据2016年山东公务员考试安排，2016年山东公务员笔试将于4月23日进行。目前距离笔试已不足一月的时间，这也预示着目前考生们的备考已进入冲刺复习阶段，如何高效率的学习，取得事半功倍的效果？山东公务员考试网（www.sdgwy.org）以此出发点，并作如下整理，希望考生们能迎头赶上，取得高分。</p>
-    <p>导语：根据2016年山东公务员考试安排，2016年山东公务员笔试将于4月23日进行。目前距离笔试已不足一月的时间，这也预示着目前考生们的备考已进入冲刺复习阶段，如何高效率的学习，取得事半功倍的效果？山东公务员考试网（www.sdgwy.org）以此出发点，并作如下整理，希望考生们能迎头赶上，取得高分。</p>
-    <p>导语：根据2016年山东公务员考试安排，2016年山东公务员笔试将于4月23日进行。目前距离笔试已不足一月的时间，这也预示着目前考生们的备考已进入冲刺复习阶段，如何高效率的学习，取得事半功倍的效果？山东公务员考试网（www.sdgwy.org）以此出发点，并作如下整理，希望考生们能迎头赶上，取得高分。</p>
-    <a href="11">期中</a><a href="7">课堂作业</a><a href="8">课堂作业练习</a>
+<p><img src="img/jellyfish.jpg" alt="小天才"></p>
+<p><img src="http://p0.so.qhimg.com/bdr/_240_/t01b461995344071915.jpg" alt="小天才"></p>
+<table border="1">
+	<meta charset="utf-8">
+	<thead>
+		<tr>
+			<th>序号</th><th>姓名</th><th>性别</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>data</td>
+			<td>单元格</td>
+			<td>单元格</td>
+		</tr>
+	</tbody>
+</table>
 </body>
-
 </html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+
+</body>
+</html>>
