--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
         </div>
     </div>
 <a href="7/index.html">第七节课堂练习</a>
+<a href="8/index.html">第八节课堂练习</a>
+<a href="11/index.html">期中作业</a>
+<a href="12/index.html">第十二节课堂练习</a>
+<a href="13/index.html">第十三节课堂练习</a>
+<a href="14/index.html">第十四节课堂练习</a>
+<a href="15/index.html">第十五节课堂练习</a>
+<a href="19/index.html">期末考试作业</a>
 
 
 
